--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ SERVER_PORT=8000
 
 # Database
 DB_HOST=localhost
-DB_NAME=antpack-go
+DB_NAME=antpack_go
 DB_USER=postgres
 DB_PWD=123456
 DB_PORT=5432
